; ModuleID = '/home/carl/AnghaBench/nodemcu-firmware/app/lua/extr_linit.c_luaL_openlibs.c'
source_filename = "/home/carl/AnghaBench/nodemcu-firmware/app/lua/extr_linit.c_luaL_openlibs.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_10__ = type { i64 }

@lua_libs = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @luaL_openlibs(%struct.TYPE_10__* %0) #0 {
  %2 = alloca %struct.TYPE_10__*, align 8
  store %struct.TYPE_10__* %0, %struct.TYPE_10__** %2, align 8
  %3 = load %struct.TYPE_10__*, %struct.TYPE_10__** %2, align 8
  %4 = load i32, i32* @lua_libs, align 4
  %5 = call i32 @LROT_TABLEREF(i32 %4)
  %6 = call i32 @lua_pushrotable(%struct.TYPE_10__* %3, i32 %5)
  %7 = load %struct.TYPE_10__*, %struct.TYPE_10__** %2, align 8
  %8 = call i32 @lua_pushnil(%struct.TYPE_10__* %7)
  br label %9

9:                                                ; preds = %32, %1
  %10 = load %struct.TYPE_10__*, %struct.TYPE_10__** %2, align 8
  %11 = call i64 @lua_next(%struct.TYPE_10__* %10, i32 -2)
  %12 = icmp ne i64 %11, 0
  br i1 %12, label %13, label %33

13:                                               ; preds = %9
  %14 = load %struct.TYPE_10__*, %struct.TYPE_10__** %2, align 8
  %15 = call i64 @lua_islightfunction(%struct.TYPE_10__* %14, i32 -1)
  %16 = icmp ne i64 %15, 0
  br i1 %16, label %17, label %29

17:                                               ; preds = %13
  %18 = load %struct.TYPE_10__*, %struct.TYPE_10__** %2, align 8
  %19 = getelementptr inbounds %struct.TYPE_10__, %struct.TYPE_10__* %18, i32 0, i32 0
  %20 = load i64, i64* %19, align 8
  %21 = sub nsw i64 %20, 1
  %22 = call i64 @fvalue(i64 %21)
  %23 = icmp ne i64 %22, 0
  br i1 %23, label %24, label %29

24:                                               ; preds = %17
  %25 = load %struct.TYPE_10__*, %struct.TYPE_10__** %2, align 8
  %26 = call i32 @lua_pushvalue(%struct.TYPE_10__* %25, i32 -2)
  %27 = load %struct.TYPE_10__*, %struct.TYPE_10__** %2, align 8
  %28 = call i32 @lua_call(%struct.TYPE_10__* %27, i32 1, i32 0)
  br label %32

29:                                               ; preds = %17, %13
  %30 = load %struct.TYPE_10__*, %struct.TYPE_10__** %2, align 8
  %31 = call i32 @lua_pop(%struct.TYPE_10__* %30, i32 1)
  br label %32

32:                                               ; preds = %29, %24
  br label %9

33:                                               ; preds = %9
  %34 = load %struct.TYPE_10__*, %struct.TYPE_10__** %2, align 8
  %35 = call i32 @lua_pop(%struct.TYPE_10__* %34, i32 1)
  ret void
}

declare dso_local i32 @lua_pushrotable(%struct.TYPE_10__*, i32) #1

declare dso_local i32 @LROT_TABLEREF(i32) #1

declare dso_local i32 @lua_pushnil(%struct.TYPE_10__*) #1

declare dso_local i64 @lua_next(%struct.TYPE_10__*, i32) #1

declare dso_local i64 @lua_islightfunction(%struct.TYPE_10__*, i32) #1

declare dso_local i64 @fvalue(i64) #1

declare dso_local i32 @lua_pushvalue(%struct.TYPE_10__*, i32) #1

declare dso_local i32 @lua_call(%struct.TYPE_10__*, i32, i32) #1

declare dso_local i32 @lua_pop(%struct.TYPE_10__*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
